@@ -19,6 +19,7 @@ android {
         targetSdk 33
         versionCode 3
         versionName "0.1"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,8 +31,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
+
+        tasks.withType(JavaCompile) {
+            options.compilerArgs += '--enable-preview'
+        }
+        tasks.withType(Test) {
+            jvmArgs += "--enable-preview"
+        }
     }
     buildFeatures {
         viewBinding true
@@ -98,6 +106,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation "org.mockito:mockito-core:2.1.0"
 
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
